fix: Update short_name in manifest.json for consistency

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Algo Science Lab - Semiconductor Design",
-  "short_name": "Algo Science",
+  "short_name": "Algo Science Lab",
   "description": "Leading semiconductor design startup in Bangladesh offering RTL to GDSII, IC design, and Cadence Virtuoso services",
   "start_url": "/",
   "display": "standalone",
