--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,19 +9,19 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon.svg",
+      "src": "/Favicon.png",
       "sizes": "any",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-192x192.png",
+      "src": "/Favicon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/Favicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -34,8 +34,8 @@
   ],
   "screenshots": [
     {
-      "src": "/capture_251104_214240.png",
-      "sizes": "1920x1080",
+      "src": "/Showreel.png",
+      "sizes": "300x300",
       "type": "image/png"
     }
   ],
